--- a/elternbrief/letters/templates/letters/login.html
+++ b/elternbrief/letters/templates/letters/login.html
@@ -10,10 +10,12 @@
             {# Empty div for centering the middle div #}
             <div class="w3-quarter"><p></p></div>
 
+            {# Actual login form: #}
             <div class="w3-card-4 w3-half w3-round">
                 <header class="w3-container w3-theme w3-left-align w3-round">
                     <h1>Login</h1>
                 </header>
+
                     <form class="w3-container w3-left-align w3-margin-top" action="{% url 'letters:login' %}" method="post">
                         {% csrf_token %}
                         <label class="w3-margin-top">Nutzername</label>
@@ -28,6 +30,7 @@
 
             {# Another empty div for centering the middle div #}
             <div class="w3-quarter"><p></p></div>
+
         </div>
     </div>
 
