--- a/letters/templates/letters/base.html
+++ b/letters/templates/letters/base.html
@@ -119,7 +119,7 @@
                 {% if request.user.is_authenticated %}
                     {# If the user is logged in, show their username and a logout button in a dropdown menu #}
                     <div class="w3-dropdown-hover w3-right">
-                        <button class="w3-button w3-hover-white" style="width:150px">
+                        <button class="w3-button w3-hover-white" style="min-width:150px">
                             <i class="fa fa-user"></i> {{ user.username }}
                         </button>
                         <div class="w3-dropdown-content w3-bar-block w3-card-4">
