--- a/letters/templates/letters/letters_index.html
+++ b/letters/templates/letters/letters_index.html
@@ -18,7 +18,12 @@
                     <div class="w3-container">
                         {% with child_id=child.id %}
                             {% for letter in letters|get_item:child_id %}
-                                <p><a href="{% url 'letters:letter_detail' child.pk letter.pk %}">{{ letter }}</a></p>
+                                <p>
+                                    <a href="{% url 'letters:letter_detail' child.pk letter.pk %}">
+                                        {% if not child in letter.students_viewed.all %}
+                                            <i class="fa fa-exclamation"
+                                               style="color: red"></i>{% endif %} {{ letter }}
+                                    </a></p>
                             {% endfor %}
                         {% endwith %}
                     </div>
