--- a/letters/templates/letters/letter_detail.html
+++ b/letters/templates/letters/letter_detail.html
@@ -8,12 +8,9 @@
 {% endblock %}
 
 {% block content %}
-    <div class="w3-row-padding w3-padding-64 w3-container w3-center">
-        {# Just an empty placeholder container to make the content stay centered. #}
-        <div class="w3-col l3 m2 w3-hide-small"><p></p></div>
+    <section class="page-content">
 
         {# Actual content: #}
-        <div class="w3-col l6 m8 s12">
             <p>Sie betrachten diesen Brief gerade für den Schüler <b>{{ student }}.</b></p>
             {% if response and letter.confirmation %}
                 <p>
@@ -22,50 +19,41 @@
                 </p>
             {% endif %}
 
-            <div class="w3-card-4 w3-round">
+            <div class="letter-detail w3-card-4 w3-round">
 
                 <header class="w3-container w3-theme-d2 w3-left-align w3-round">
                     <h1>{{ letter }}</h1>
                 </header>
 
-                <div class="w3-container w3-left-align">
-                    <p><b>Veröffentlichungsdatum:</b> {{ letter.date_published }}</p>
-                </div>
+                <p><b>Veröffentlichungsdatum:</b> {{ letter.date_published }}</p>
 
                 {% if letter.date_due %}
-                    <div class="w3-container w3-left-align">
-                        <p><b>Fällig bis:</b> {{ letter.date_due }}</p>
-                    </div>
+                    <p><b>Fällig bis:</b> {{ letter.date_due }}</p>
                 {% endif %}
 
                 {% if letter.teacher %}
-                    <div class="w3-container w3-left-align">
-                        <p><b>Zuständige Lehrkraft:</b> {{ letter.teacher }}</p>
-                    </div>
+                    <p><b>Zuständige Lehrkraft:</b> {{ letter.teacher }}</p>
                 {% endif %}
 
-                <div class="w3-container w3-left-align">
-                    <p><b>Muss {% if not letter.confirmation %}nicht {% endif %}bestätigt werden.</b> <i
-                            class="fa fa-info-circle"></i></p>
-                </div>
+                <p><b>Muss {% if not letter.confirmation %}nicht {% endif %}bestätigt werden.</b>
+                    <i class="fa fa-info-circle"></i></p>
 
 {#                <div class="w3-container" id="canvas">#}
 {#                    <embed src="{{ letter.document.url }}" type="application/pdf" width="100%" height="800px"/>#}
 {#                </div>#}
                 <button class="w3-btn w3-theme-d2 w3-margin"><a class="pdf-link" href="{{ letter.document.url }}" target="_blank">Download</a></button>
 
-                <canvas class="pdf-canvas" width="100%" height="100%" style="border: 5px solid black"></canvas>
+                <canvas class="pdf-canvas w3-round w3-border" width="100%" height="100%"></canvas>
 
                 {# Section for responding to a letter: #}
                 {% if not response and letter.confirmation %}
-                    <form class="w3-container w3-margin w3-left-align"
-                          action="{% url 'letters:letter_confirm' student.id letter.id %}" method="post">
+                    <form action="{% url 'letters:letter_confirm' student.id letter.id %}" method="post">
                         {% csrf_token %}
                         <h3>Diesen Brief bestätigen:</h3>
 
                         {% for field in text_fields %}
-                            <p class="w3-margin-top">{{ field.description }}: {% if not field.optional %}
-                                <i class="fa fa-asterisk w3-tiny" style="color: red"></i>{% endif %}</p>
+                            <p>{{ field.description }}: {% if not field.optional %}
+                                <i class="fa fa-asterisk w3-tiny"></i>{% endif %}</p>
                             <input class="w3-input w3-border w3-round w3-margin-bottom" type="text"
                                    name="{{ field.name }}" id="{{ field.name }}">
                         {% endfor %}
@@ -74,11 +62,11 @@
                             <input class="w3-check w3-margin-top w3-margin-bottom" type="checkbox"
                                    name="{{ field.name }}" id="{{ field.name }}">
                             <label>{{ field.description }} {% if field.must_be_true %}
-                                <i class="fa fa-asterisk w3-tiny" style="color: red"></i>{% endif %}</label>
+                                <i class="fa fa-asterisk w3-tiny"></i>{% endif %}</label>
                         {% endfor %}
 
                         {% for field in selection_fields %}
-                            <p class="w3-margin-top">{{ field.description }}: <i class="fa fa-asterisk w3-tiny"
+                            <p>{{ field.description }}: <i class="fa fa-asterisk w3-tiny"
                                                                                  style="color: red"></i></p>
                             <select class="w3-select w3-round" name="{{ field.name }}" id="{{ field.name }}">
                                 <option value="" disabled selected>Bitte auswählen:</option>
@@ -88,7 +76,7 @@
                             </select>
                         {% endfor %}
 
-                        <p class="w3-margin"><i class="fa fa-asterisk w3-small" style="color: red"></i> Markiert
+                        <p class="w3-margin"><i class="fa fa-asterisk w3-small"></i> Markiert
                             Pflichtfelder.</p>
 
                         <button class="w3-btn w3-theme-d2 w3-margin" type="submit"><i class="fa fa-check"></i>
@@ -98,12 +86,8 @@
                 {% endif %}
 
             </div>
-        </div>
 
-        {# Another empty placeholder container to make the content stay centered. #}
-        <div class="w3-col l3 m2 w3-hide-small"><p></p></div>
-
-    </div>
+    </section>
 {% endblock %}
 
 {% block script %}
