--- a/letters/templates/letters/letter_result.html
+++ b/letters/templates/letters/letter_result.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="w3-row-padding w3-padding-64 w3-container w3-center">
+    <div class="w3-padding-64 w3-container w3-center">
         {% render_table table %}
     </div>
 {% endblock %}
